--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ansarker.github.io/",
+  "homepage": "http://ansarker.github.io/iansarker",
   "name": "iansarker",
   "version": "0.1.0",
   "private": true,
