--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://ansarker.github.io",
-  "name": "ansarker.github.io",
+  "homepage": "https://ansarker.github.io/iansarker",
+  "name": "iansarker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
